add sequence chunking

--- a/README.Rmd
+++ b/README.Rmd
@@ -71,7 +71,7 @@ The usual way for this is to call an LLM model served online. We use {chattr} pa
 
 We query 16 generation of the model with a temperature of 0.5.
 
-```{{r}}
+```{r eval=FALSE}
 library(chattr)
 response <- ch_submit_job(
   prompt = prompt, 
@@ -83,7 +83,7 @@ response <- ch_submit_job(
 
 This consists in decoding the output and parsing it to a majority-vote engine : 
 
-```{{r}}
+```{r eval=FALSE}
 r_reference_card_df <- majority_vote(decode_all_sample(response))
 ```
 
