add yaml option fix max_line consistency check

--- a/README.Rmd
+++ b/README.Rmd
@@ -85,6 +85,6 @@ This consists in decoding the output and parsing it to a majority-vote engine :
 
 ```{r eval=FALSE}
 # response
-r_reference_card_df <- majority_vote(decode_all_sample(response))
+r_reference_card_df <- majority_vote(decode_json_result(response))
 ```
 
